--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
