--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "stripe": "^11.16.0"
   }
 }
