--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@mui/x-data-grid": "^6.0.4",
     "@reduxjs/toolkit": "^1.9.3",
@@ -24,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
+    "sass": "^1.61.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
